--- a/public/styles.css
+++ b/public/styles.css
@@ -69,13 +69,26 @@ body {
     margin-top: 10px;
   }
   
-  .modify-btn, .delete-btn {
+  .modify-btn {
     padding: 0.5rem 1rem;
     margin-right: 10px;
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
+  }
+  .delete-btn {
+    padding: 0.5rem 1rem;
+    margin-right: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  .delete-btn:hover {
+    background-color: darkred;
   }
   
   .modify-btn:hover, .delete-btn:hover {
